# peer-to-peer

./: .gitignore  README.md  eslint.config.js  package.json  vite.config.ts
.github/workflows/: build-android.yml  build.yml
src/: routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  ipc.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/chat/: channel.rs  event.rs  peers.rs  ticket.rs
src-tauri/src/state/: context.rs  store.rs
src/components/Layout/: footer.tsx  loader.tsx  navbar.tsx
src/components/elements/: button.tsx  eventLog.tsx  lobbyForm.tsx  messages.tsx  modal.tsx  ticket.tsx  topbar.tsx
src/components/features/: about.tsx  branding.tsx  eventLog.tsx  lobbyForm.tsx  messages.tsx  peerList.tsx  roomsList.tsx  search.tsx  ticket.tsx  topbar.tsx  userEdit.tsx
src/hooks/: useConfirm.tsx  useInfiniteScroll.ts  useMessageLoader.ts  useModal.ts  useScrollToBottom.ts
src/pages/: Chat.tsx  Lobby.tsx  Splash.tsx  index.ts
src/services/: db.ts  ipc.ts  notifications.ts
src/styles/: global.css
src/types/: chat.ts  events.ts  index.ts
src/utils/: index.ts
