[package]
name = "cups"
version = "0.4.3"
description = "A Peer to Peer Tauri Chat App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cups_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
tauri-plugin-store = "^2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# runtime
tokio = { version = "^1", features = ["full"] } # "full" enables all tokio features
tokio-util = { version = "0.7.15" }

# debugging
tracing = "0.1"
anyhow = "^1.0.96"
tracing-subscriber = "0.3.19"

# cryptography
rand = "0.8.5" # version constrained by iroh

# peer to peer
iroh = {version = "0.35", features = [] }
iroh-gossip = { version = "0.35" }
iroh-base = { version = "0.35", features = ["ticket"] }
n0-future = "0.1.3"

# networking
postcard = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
